fix menu spacing and selected colors

--- a/src/_sass/gtk/_common-3.0.scss
+++ b/src/_sass/gtk/_common-3.0.scss
@@ -2040,7 +2040,7 @@ menubar,
       background-color: $selected_bg_color;
       box-shadow: none;
       border-color: if($titlebar == 'light', $sec_selected_bg_color, $alt_selected_bg_color);
-      color: $selected_fg_color_2;
+      color: $selected_fg_color;
     }
 
     &:disabled {
@@ -2062,19 +2062,19 @@ menu,
   border-radius: 0;
   transition: none;
   background-color: $bg_color;
-  border: 1px solid $borders_color; // adds borders in a non composited env
+  // border: 1px solid $borders_color; // adds borders in a non composited env
 
   @if $window == 'round' {
     padding: 3px;
   } @else {
-    padding: 6px 0;
+    padding: 6px;
   }
 
   .csd & {
     border: none;
-    border-radius: $corner_radius;
-    box-shadow: inset 0 0 0 1px rgba($fg_color, 0.12);
-    padding: 8px 1px;
+    border-radius: $material_radius;
+    box-shadow: inset 0 0 0 1px rgba($fg_color, 0.16);
+    // padding: 8px 1px;
   }
 
   separator,
@@ -2087,8 +2087,9 @@ menu,
 
   menuitem {
     min-height: 28px;
-    min-width: 175px;
+    min-width: 150px;
     padding: 0 8px 0 4px;
+    margin: 0 6px;
     text-shadow: none;
     transition: background-color 20ms ease-out;
     // -gtk-icon-style: symbolic;
@@ -2173,6 +2174,21 @@ menu,
       border-color: transparent ;
     }
   }
+}
+
+/* hamburger menu on headerbar */
+.csd .menu {
+  padding: 0;
+}
+
+/* menu and right click context-menu */
+.csd menu,
+.csd .context-menu {
+  padding: 7px 1px;
+}
+
+.csd popover.background.touch-selection { /* idk */
+  padding: 70px 1px;
 }
 
 // fix for label inside separator not having spacing
@@ -3894,7 +3910,7 @@ decoration {
 
   .csd.popup & {
     border-radius: $material_radius;
-    box-shadow: 0 3px 6px if($variant == 'light', rgba(black, 0.12), rgba(black, 0.1)), 0 0 0 1px $borders_color;
+    box-shadow: 0 3px 6px if($variant == 'light', rgba(black, 0.12), rgba(black, 0.1));
   }
 
   tooltip.csd & {
@@ -4034,12 +4050,12 @@ headerbar stack:not(:first-child) {
 
 // catch all extend
 %selected_items {
-  background-color: $selected_bg_color_2;
+  background-color: $selected_bg_color;
   @extend %nobg_selected_items;
 }
 
 %nobg_selected_items {
-  color: $selected_fg_color_2;
+  color: $selected_fg_color;
 
   &:disabled { color: mix($selected_fg_color, $selected_bg_color, 50%); }
 }
